construct monophonic score, recognize chord

--- a/MidiAnalyzer/MidiAnalyzer.csproj
+++ b/MidiAnalyzer/MidiAnalyzer.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Note.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RhythmPattern.cs" />
+    <Compile Include="MelodicContour.cs" />
     <Compile Include="TrackInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
