--- a/MidiAnalyzer/MidiAnalyzer.csproj
+++ b/MidiAnalyzer/MidiAnalyzer.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MelodicContour.cs" />
+    <Compile Include="Test\SFXTest.cs" />
     <Compile Include="TrackInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
